application/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: color-app
      version: red
  template:
    metadata:
      labels:
        app: color-app
        version: red
    spec:
      containers:
      - name: color-app
        image: limanalhassan/my-aaa-py:v1
