application/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: color-app
      version: green
  template:
    metadata:
      labels:
        app: color-app
        version: green
    spec:
      containers:
      - name: color-app
        image:  limanalhassan/my-aaa-py:v1
