application/red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: color-app
      version: blue
  template:
    metadata:
      labels:
        app: color-app
        version: blue
    spec:
      containers:
      - name: color-app
        image: limanalhassan/my-aaa-py:v1
